--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,6 @@
+v0.1b2  - (Aug 7, 2022)
+        - FIXED: Main focus is on the UI at this point, and making sure it aligns visually with the stock Tesla app,
+          and is functionally/visually in line.  Will be adding more functionality and stats at a later point. ;)
+
 v0.1b   - (Aug 6, 2022)
         - RELEASE - Initial release of PWRMON! Enjoy. Lots more to be added... keep your ideas and suggestions coming!  
