--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v1.13   - (TBA)
+        - FIXED: Enhanced some of the look/feel to match the overall colors/theme of the app
+
 v1.12   - (August 24, 2022)
         - FIXED: Minor logic changes to successfully use API values coming from the Gateway in order to show
           Grid down/resyncing messages.
