--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-v1.15   - (TBA)
+v1.15   - (August 31, 2022)
         - FIXED: Enhanced some of the look/feel to match the overall colors/theme of the app
         - ADDED: Included current battery configuration mode, ie. backup, self-powered, and time-based, as
           well as the percentage of backup reserve that is currently configured.
