--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 v1.17   - (TBA)
         - ADDED: Email notification capabilities for major grid events: Down, Syncing or Return to Normal.
           Added the necessary setup menu items to record TO:, FROM:, SMTP Server, SMTP Port, Password, etc.
-          Please note, this has only been tested on SSL SMTP connections, like ssmtp://smtp.gmail.com on
+          Please note, this has only been tested on SSL SMTP connections, like smtps://smtp.gmail.com on
           port 465. Please note #2, in order for you to make use of a service like gmail in a case like
           this, you will need to obtain an "app password" to provide the necessary authentication using
           this method.
