--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+v1.21   - (TBA)
+        - ADDED: Thanks to the excellent suggestion of @JGrana, I have added a secondary email address
+          for the purposes of sending SMS/Text messages to your phone during major Powerwall events!
+          The format for the email address must be: 1234567890@carrierdomainname.com, or as specified
+          by your carrier. Most all carriers have added the capability of sending SMS/Text messages
+          to you via email. Please see this website for further info and format of your carriers
+          SMS/Text email format: https://avtech.com/articles/138/list-of-email-to-sms-addresses/
+        - FIXED: Detection of malformed API returns from weather.gov, preventing nulls and other errors,
+          and requests a retransmission in order to present valid weather data.
+
 v1.20   - (September 29, 2022)
         - MAJOR: In recognition of major Hurricane Ian, I have integrated a 3 day weather forecast that
           includes today's current conditions, giving you all necessary info to get a good idea what's
