--- a/changelog.txt
+++ b/changelog.txt
@@ -1,111 +1,108 @@
+v1.23   - (BETA TBA)
+        - MINOR: Small wording changes around the setup menu when it comes to installing Entware prerequisites. Added a check
+          when the script starts up to ensure that all prerequisites are in place before running the script.
+        - CHANGED: Modified the update functionality to allow you to force-update your current RTRMON script with the current
+          build available on github.
+
 v1.22   - (October 5, 2022)
-        - FIXED: the -wipe SCREEN command is now being checked earlier before the script determines how
-          it is going to initiate a SCREEN session.
-        - FIXED: Further refinement on fixing malformed API returns from weather.gov in order to prevent
-          null results from tainting the rest of the results. Seems to be good now!
+        - FIXED: the -wipe SCREEN command is now being checked earlier before the script determines how it is going to initiate
+          a SCREEN session.
+        - FIXED: Further refinement on fixing malformed API returns from weather.gov in order to prevent null results from
+          tainting the rest of the results. Seems to be good now!
 
 v1.21   - (October 3, 2022)
-        - ADDED: Thanks to the excellent suggestion of @JGrana, I have added a secondary email address
-          for the purposes of sending SMS/Text messages to your phone during major Powerwall events!
-          The format for the email address must be: 1234567890@carrierdomainname.com, or as specified
-          by your carrier. Most all carriers have added the capability of sending SMS/Text messages
-          to you via email. Please see this website for further info and format of your carriers
+        - ADDED: Thanks to the excellent suggestion of @JGrana, I have added a secondary email address for the purposes of
+          sending SMS/Text messages to your phone during major Powerwall events! The format for the email address must be:
+          1234567890@carrierdomainname.com, or as specified by your carrier. Most all carriers have added the capability of
+          sending SMS/Text messages to you via email. Please see this website for further info and format of your carriers
           SMS/Text email format: https://avtech.com/articles/138/list-of-email-to-sms-addresses/
-        - FIXED: Detection of malformed API returns from weather.gov, preventing nulls and other errors,
-          in order to present valid weather data each and every time.
-        - FIXED: Runtime calculations when greater than 3 digits would screw up the alignment of the
-          visualizations, and capped max runtime remaining amounts at +99.9h.  
+        - FIXED: Detection of malformed API returns from weather.gov, preventing nulls and other errors, in order to present
+          valid weather data each and every time.
+        - FIXED: Runtime calculations when greater than 3 digits would screw up the alignment of the visualizations, and
+          capped max runtime remaining amounts at +99.9h.  
 
 v1.20   - (September 29, 2022)
-        - MAJOR: In recognition of major Hurricane Ian, I have integrated a 3 day weather forecast that
-          includes today's current conditions, giving you all necessary info to get a good idea what's
-          going to happen with the weather. Forecast includes current/upcoming conditions, temperature,
-          and wind direction/speed. Ability to see detailed conditions expands on the current and
-          upcoming conditions, including chances of rain. This functionality uses a free API from
-          weather.gov, and determines your location from the coordinates of your WAN exit IP to determine
-          the weather for your local region. It will be close, but may not be exactly the weather that is
-          happening on top of your house.  Will look into allowing you to add custom longitude and
-          latitude coordinates in the near future.
-        - CHANGED: Included JQ as part of the prerequisites needed to be installed when PWRMON is set up
-          for the first time. This was my error, thinking that the JQ tool was either already installed by
-          default, or came along with an Entware install by default.  Now, when going into Setup -> Config,
-          the script will check for the existence of JQ, and will prompt an install if it's not already
-          present under /opt/bin. JQ is necessary for pulling data from your Tesla Powerwall Gateway API
-          for the purposes of extracting current power stats. Added a check when the script starts up to
-          ensure that all prerequisites are in place before running the script. Thanks to @monakh for
-          noticing this behavior with JQ on a fresh install of VPNMON-R2!
+        - MAJOR: In recognition of major Hurricane Ian, I have integrated a 3 day weather forecast that includes today's current
+          conditions, giving you all necessary info to get a good idea what's going to happen with the weather. Forecast includes
+          current/upcoming conditions, temperature, and wind direction/speed. Ability to see detailed conditions expands on the
+          current and upcoming conditions, including chances of rain. This functionality uses a free API from weather.gov, and
+          determines your location from the coordinates of your WAN exit IP to determine the weather for your local region. It
+          will be close, but may not be exactly the weather that is happening on top of your house.  Will look into allowing you
+          to add custom longitude and latitude coordinates in the near future.
+        - CHANGED: Included JQ as part of the prerequisites needed to be installed when PWRMON is set up for the first time. This
+          was my error, thinking that the JQ tool was either already installed by default, or came along with an Entware install
+          by default.  Now, when going into Setup -> Config, the script will check for the existence of JQ, and will prompt an
+          install if it's not already present under /opt/bin. JQ is necessary for pulling data from your Tesla Powerwall Gateway
+          API for the purposes of extracting current power stats. Added a check when the script starts up to ensure that all
+          prerequisites are in place before running the script. Thanks to @monakh for noticing this behavior with JQ on a fresh
+          install of VPNMON-R2!
 
 v1.18   - (September 19, 2022)
-        - ADDED: Email notification capabilities for major grid events: Down, Syncing or Return to Normal.
-          Added the necessary setup menu items to record TO:, FROM:, SMTP Server, SMTP Port, Password, etc.
-          Please note, this has only been tested on SSL SMTP connections, like smtps://smtp.gmail.com on
-          port 465. I can add other methods of authentication if requests are made. Please note #2, in
-          order for you to make use of a service like gmail in a case like this, you will need to obtain
-          an "app password" to provide the necessary authentication using this method. And note #3, your
-          smtp password is encrypted and saved in a config file that resides locally on the router under
-          /jffs/addons/pwrmon.d/pwrmon.cfg, however, please know that due to the security constraints on
-          these types of routers, I would still consider this to be an unsafe method of storage, and could
-          still very easily be compromised by someone who knows what they're doing. Only use non-essential
-          email accounts to send or receive these emails so you don't risk a primary account compromise!
-        - CHANGED: The behavior of the "pwrmon -screen" command, so that when you execute this commandline
-          parameter, it first will look for orphaned screens and wipe them... then, it will launch PWRMON
-          into a new screen environment, and connect to it. This skips the original behavior where it drops
-          back to a command prompt, and asks the user to connect to the PWRMON screen by requiring the user
-          to run the "screen -r pwrmon" command. If a screen session is already running, and you type
-          "pwrmon -screen", it will then connect to this screen session without requiring any user input.
-          Thanks much to @TITAN for the great suggestion!
+        - ADDED: Email notification capabilities for major grid events: Down, Syncing or Return to Normal. Added the necessary
+          setup menu items to record TO:, FROM:, SMTP Server, SMTP Port, Password, etc. Please note, this has only been tested
+          on SSL SMTP connections, like smtps://smtp.gmail.com on port 465. I can add other methods of authentication if requests
+          are made. Please note #2, in order for you to make use of a service like gmail in a case like this, you will need to
+          obtain an "app password" to provide the necessary authentication using this method. And note #3, your smtp password is
+          encrypted and saved in a config file that resides locally on the router under /jffs/addons/pwrmon.d/pwrmon.cfg, however,
+          please know that due to the security constraints on these types of routers, I would still consider this to be an unsafe
+          method of storage, and could still very easily be compromised by someone who knows what they're doing. Only use non-
+          essential email accounts to send or receive these emails so you don't risk a primary account compromise!
+        - CHANGED: The behavior of the "pwrmon -screen" command, so that when you execute this commandline parameter, it first
+          will look for orphaned screens and wipe them... then, it will launch PWRMON into a new screen environment, and connect
+          to it. This skips the original behavior where it drops back to a command prompt, and asks the user to connect to the
+          PWRMON screen by requiring the user to run the "screen -r pwrmon" command. If a screen session is already running, and
+          you type "pwrmon -screen", it will then connect to this screen session without requiring any user input. Thanks much to
+          @TITAN for the great suggestion!
 
 v1.16   - (September 10, 2022)
-        - ADDED: Capability to go to a (P)revious page like on RTRMON.  You can now flip back and forth
-          between pages, instead of having to run through them all to get to the same point. Yey!
-        - ADDED: Logging entries for grid outage and grid syncing events.  Depending on the length of your
-          outages, initially, you may want to keep track of the size of your pwrmon.log file, and delete
-          lines as necessary. I will be building in a trimming function at a later date.
+        - ADDED: Capability to go to a (P)revious page like on RTRMON.  You can now flip back and forth between pages, instead of
+          having to run through them all to get to the same point. Yey!
+        - ADDED: Logging entries for grid outage and grid syncing events.  Depending on the length of your outages, initially,
+          you may want to keep track of the size of your pwrmon.log file, and delete lines as necessary. I will be building in a
+          trimming function at a later date.
 
 v1.15   - (August 31, 2022)
         - FIXED: Enhanced some of the look/feel to match the overall colors/theme of the app
-        - ADDED: Included current battery configuration mode, ie. backup, self-powered, and time-based, as
-          well as the percentage of backup reserve that is currently configured.
+        - ADDED: Included current battery configuration mode, ie. backup, self-powered, and time-based, as well as the percentage
+          of backup reserve that is currently configured.
         - ADDED: Now displaying the % battery remaining on the large font dashboard view (page 3)
 
 v1.12   - (August 24, 2022)
-        - FIXED: Minor logic changes to successfully use API values coming from the Gateway in order to show
-          Grid down/resyncing messages.
-        - ADDED: Grid down/syncing indicators in the large font view (page 3), switching icons to red, giving
-          user proper notification when these events happen.
+        - FIXED: Minor logic changes to successfully use API values coming from the Gateway in order to show Grid down/resyncing
+          messages.
+        - ADDED: Grid down/syncing indicators in the large font view (page 3), switching icons to red, giving user proper
+          notification when these events happen.
         
 v1.1    - (August 18, 2022)
-        - MAJOR: Added a major feature on the new 3rd page that displays powerflows for solar, grid, home and
-          battery in large font numbers for the purposes of displaying this on a full-time dashboard in your
-          home. The large fonts are especially welcome so you can read what's happening on your local power
-          grid from across the room. Designed to take advantage of cheap 7" tablets or wall touch displays,
-          to provide a suite of monitoring apps (along with VPNMON-R2 and RTRMON) so you can see what's
-          happening in your environment at all times.
-        - ADDED: Added visual cue notifications on the Power Flow View (page 1) when the grid goes down, or 
-          comes back up, but is not in sync yet with your Gateway device.
+        - MAJOR: Added a major feature on the new 3rd page that displays powerflows for solar, grid, home and battery in large font
+          numbers for the purposes of displaying this on a full-time dashboard in your home. The large fonts are especially welcome
+          so you can read what's happening on your local power grid from across the room. Designed to take advantage of cheap 7"
+          tablets or wall touch displays, to provide a suite of monitoring apps (along with VPNMON-R2 and RTRMON) so you can see
+          what's happening in your environment at all times.
+        - ADDED: Added visual cue notifications on the Power Flow View (page 1) when the grid goes down, or comes back up, but is
+          not in sync yet with your Gateway device.
         - FIXED: Minor changes and corrections.
 
 v1.0    - (August 15, 2022)
-        - Initial release of PWRMON!  All bugs and inconsistencies have been resolved as of this first major
-          release, providing the basic functionality of showing powerflows from solar, to/from home, to/from the
-          grid, and to/from your batteries.  The secondary page (by hitting the (N)ext key) shows further details
-          using progress bar views.  Calculations on expected runtime based on current load is displayed on both
-          pages. All complimentary setup, config, view logs, update and uninstall menu pages are in place.
+        - Initial release of PWRMON!  All bugs and inconsistencies have been resolved as of this first major release, providing the
+          basic functionality of showing powerflows from solar, to/from home, to/from the grid, and to/from your batteries.  The
+          secondary page (by hitting the (N)ext key) shows further details using progress bar views.  Calculations on expected
+          runtime based on current load is displayed on both pages. All complimentary setup, config, view logs, update and uninstall
+          menu pages are in place.
 
 v0.1b3  - (August 7, 2022)
-        - ADDED: Created a 2nd page showing indicators for all of the main functions, solar, grid, home and power-
-          walls. Each progressbar is measured based on values in the setup, including number of powerwalls, max
-          power generation from both solar, and the max load of your home. Also, calculating a runtime based on
-          current battery percentage and current load on the home. An indicator was also added to show the max
-          load your powerwalls can take based on how many powerwalls you have vs. the load in your home.
+        - ADDED: Created a 2nd page showing indicators for all of the main functions, solar, grid, home and powerwalls. Each
+          progressbar is measured based on values in the setup, including number of powerwalls, max power generation from both solar,
+          and the max load of your home. Also, calculating a runtime based on current battery percentage and current load on the
+          home. An indicator was also added to show the max load your powerwalls can take based on how many powerwalls you have vs.
+          the load in your home.
         - FIXED: Made a modifcation on the grid ASCII graphic... still not satisfied, but it's getting better.
 
 v0.1b2  - (August 7, 2022)
-        - FIXED: Main focus is on the UI at this point, and making sure it aligns visually with the stock Tesla app,
-          and is functionally/visually in line.  Will be adding more functionality and stats at a later point. ;) 
-          Changed up the look/feel of the main UI, and making sure that everything looks the same.  I noticed on my
-          first release that there were some differences in the ways that grid, solar and home were being displayed,
-          so now they are more uniform.
+        - FIXED: Main focus is on the UI at this point, and making sure it aligns visually with the stock Tesla app, and is
+          functionally/visually in line.  Will be adding more functionality and stats at a later point. ;) Changed up the look/feel
+          of the main UI, and making sure that everything looks the same.  I noticed on my first release that there were some
+          differences in the ways that grid, solar and home were being displayed, so now they are more uniform.
 
 v0.1b   - (August 6, 2022)
         - RELEASE - Initial release of PWRMON! Enjoy. Lots more to be added... keep your ideas and suggestions coming!  
