--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-v1.23   - (BETA TBA)
+v1.25   - (November 20, 2022)
         - ADDED: An auto-rotate option is now available by hitting the (R)otate pgs option from any of the currently 3 other
           stats screens.  When doing so, PWRMON will automatically advance to the next page, and loop through each until you
           disable this feature by again hitting the (R)otate pgs key.
