--- a/changelog.txt
+++ b/changelog.txt
@@ -4,9 +4,10 @@ v1.2.9  - (February 7, 2024)
           time for me as well. All my scripts moving forward will go this route. Change log wording is now changed to
           conform to the major/minor/patch standards. So previously, FIXED now conforms to PATCH, ADDED conforms to MINOR,
           and MAJOR stays the same!
-        - PATCH: Changed the versioning logic to align with the general accepted way of versioning, using the notation:
-          major.minor.patch ... finally, right? After seeing @thelonelycoder changing his ways, I figured it was probably
-          time for me as well. All my scripts moving forward will go this route.
+        - PATCH: Changed some logic to restart the script if it has trouble connecting to the Powerwall Gateway, or if
+          certain values come back as null, indicating that it's having trouble connecting to the API. Inserted some timers
+          in certain places to give an indication that the script is waiting for services to be restored before trying
+          again.
 
 v1.27   - (August 31, 2023)
         - MINOR: Changed some of the notification wording that PWRMON uses when notifying you of a powerwall event via
